[gd_scene load_steps=6 format=3 uid="uid://bqnvyj8yj4o5q"]

[ext_resource type="Script" uid="uid://cqsweh8xyewi4" path="res://脚本/主游戏.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://dbnjhcmovv0pm" path="res://场景/升级选择.tscn" id="1_yvmqe"]
[ext_resource type="Texture2D" uid="uid://bx74t84y7ja5u" path="res://资源/UI/icon.svg" id="2_5xu8x"]
[ext_resource type="Script" uid="uid://damfhv6pswcsc" path="res://脚本/玩家.gd" id="3_player"]
[ext_resource type="Script" uid="uid://cnoroq5y5reqe" path="res://脚本/武器/子弹武器.gd" id="4_weapon"]

[node name="主游戏" type="Node2D"]
script = ExtResource("1_main")

[node name="玩家" type="CharacterBody2D" parent="."]
position = Vector2(640, 360)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_player")

[node name="Sprite2D" type="Sprite2D" parent="玩家"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_5xu8x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="玩家"]
scale = Vector2(3, 3)

[node name="武器容器" type="Node2D" parent="玩家"]

[node name="子弹武器" type="Node2D" parent="玩家/武器容器"]
script = ExtResource("4_weapon")

[node name="敌人生成器" type="Node2D" parent="."]

[node name="敌人容器" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="升级界面" parent="UI" instance=ExtResource("1_yvmqe")]

[node name="经验条" type="ProgressBar" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_bottom = 26.0
grow_horizontal = 2
max_value = 1.0
show_percentage = false

[node name="Label" type="Label" parent="UI/经验条"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "0 / 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="等级" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 26.0
grow_horizontal = 0
text = "1"
horizontal_alignment = 2

[node name="生命值" type="ProgressBar" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
value = 1.0
show_percentage = false

[node name="计时器" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_top = 28.0
offset_right = 20.5
offset_bottom = 54.0
grow_horizontal = 2
text = "00:00"
horizontal_alignment = 1

[node name="游戏计时器" type="Timer" parent="."]
autostart = true

[connection signal="experience_gained" from="玩家" to="." method="_on_experience_gained"]
[connection signal="level_up" from="玩家" to="." method="_on_level_up_player"]
[connection signal="player_hit" from="玩家" to="." method="_on_player_hit"]
[connection signal="timeout" from="游戏计时器" to="." method="_on_game_timer_timeout"]
